--- a/Sanjula Student2/Query form/Query Form.html
+++ b/Sanjula Student2/Query form/Query Form.html
@@ -153,5 +153,6 @@
     <button type="submit" id="btnsr" onclick="sendMsg(e)" >Send</button><br><br>
 
     </form>
+    <a href="../Editor/mytask.html">Page Editor</a>
 </body>
 </html>
