--- a/Sanjula Student2/main page/mainpage-1 (1).html
+++ b/Sanjula Student2/main page/mainpage-1 (1).html
@@ -26,6 +26,10 @@
         <br>
         <h1>Sri Lanka's Premiere Cricket Merchants</h1>
     </header>
+    <footer>
+        <a href="../Editor/mytask.html">Page Editor</a>
+    </footer>
+    
 
 </body>
 </html>
