--- a/Pasindu Student3/Quiz App/Quiz.html
+++ b/Pasindu Student3/Quiz App/Quiz.html
@@ -96,5 +96,6 @@
   </div>
   <script src="Script.js"></script> 
   <script src="questions.js"></script> 
+  <a class="editor" href="../Editor details/Detail.html">Editor</a>
 </body>
 </html>
