--- a/Lithira Student1/Editor/shtml.html
+++ b/Lithira Student1/Editor/shtml.html
@@ -20,6 +20,6 @@
 			<br>
 			<a href="../../index.html">Presentation Page</a><br>
 			<a href="../page 2/page 2/page2.html">Product Page</a><br>
-			<a href="../page 3/page 3/page3.html">Articles</a><br>
+			<a href="../../Article/pagearticle.html">Article</a><br>
 
 		</body>
