--- a/Lithira Student1/page 2/page 2/page2.html
+++ b/Lithira Student1/page 2/page 2/page2.html
@@ -25,6 +25,8 @@
 					<li><a href="../../../Pasindu Student3/Quiz App/Quiz.html ">Quiz </a></li>
 					<li><a href="../../../Pasindu Student3/About us/about_us.html ">About Us</a></li>
                     <li><a href="../../../Sanjula Student2/Query form/Query Form.html">Customer Coner</a> </li>
+                    <li><a href="../../../Randeepa Student4/index.html">Thumbnail Images</a></li>
+                    <li><a href="../../../Article/pagearticle.html">Article</a> </li>
 					
 				</ul>
 			</div>
