--- a/Pasindu Student3/Quiz App/Quiz.html
+++ b/Pasindu Student3/Quiz App/Quiz.html
@@ -95,7 +95,7 @@
     </div>
   </div>
   <script src="Script.js"></script> 
-  <script src="questions.js"></script> 
-  <a class="editor" href="../Editor details/Detail.html">Editor</a>
+  <script src="questions.js"></script>
+  <a class="link" href="../Editor details/Detail.html">Editor</a> 
 </body>
 </html>
