--- a/Sanjula Student2/Editor/mytask.html
+++ b/Sanjula Student2/Editor/mytask.html
@@ -19,5 +19,5 @@
 			<br><br>
             <a href="../../Sanjula Student2/main page/mainpage-1 (1).html">Main Page</a><br>
 			<a href="../../Sanjula Student2/Query form/Query Form.html">Query form page </a><br>
-			<a href="../../Sanjula Student2/page3 aricle/page3article.html">Articles</a><br>
+			<a href="../../Article/pagearticle.html">Article</a><br>
         </body>
