--- a/Sanjula Student2/main page/mainpage-1 (1).html
+++ b/Sanjula Student2/main page/mainpage-1 (1).html
@@ -16,6 +16,8 @@
                 <li><a href="../../Pasindu Student3/Quiz App/Quiz.html">Quiz</a></li>
                 <li><a href="../../Pasindu Student3/About us/about_us.html">About Us</a></li>
                 <li><a href="../Query form/Query Form.html">Customer Coner</a></li>
+                <li><a href="../../Randeepa Student4/index.html">Thumbnail Images</a></li>
+                <li><a href="../../Article/pagearticle.html">Article</a> </li>
             </ul>
         </div>
         <br>
@@ -26,7 +28,10 @@
         <br>
         <h1>Sri Lanka's Premiere Cricket Merchants</h1>
     </header>
-    <a href="../Editor/mytask.html">Page Editor</a>
+
+    <footer>
+        <a href="../Editor/mytask.html">Page Editor</a>
+    </footer>
     
 
 </body>
