--- a/Pasindu Student3/About us/about_us.html
+++ b/Pasindu Student3/About us/about_us.html
@@ -58,5 +58,7 @@
         </div>
         
     </div>
+    <br><br>
+    <a href="../../Sanjula Student2/main page/mainpage-1 (1).html">Back to Main</a>
 </body>
 </html>
