--- a/Pasindu Student3/Editor details/Detail.html
+++ b/Pasindu Student3/Editor details/Detail.html
@@ -24,8 +24,9 @@
             <li>Developing the personal detail web page. </li>
         </ol>
         <div class="my_task">
-            <a href="..\..\Pasindu Student3\Quiz App\Quiz.html">Quiz page</a><br>
-            <a href="..\..\Pasindu Student3\About us\about_us.html">Student details </a><br>
+            <a href="../../Pasindu Student3/Quiz App/Quiz.html">Quiz page</a><br>
+            <a href="../../Pasindu Student3/About us/about_us.html">Student details </a><br>
+            <a href="../../Article/pagearticle.html">Article</a>
         </div>
     </div>
 </body>
