--- a/Sanjula Student2/main page/mainpage-1 (1).html
+++ b/Sanjula Student2/main page/mainpage-1 (1).html
@@ -15,9 +15,9 @@
                 <li><a href="../../Lithira Student1/page 2/page 2/page2.html">Buy Products</a></li>
                 <li><a href="../../Pasindu Student3/Quiz App/Quiz.html">Quiz</a></li>
                 <li><a href="../../Pasindu Student3/About us/about_us.html">About Us</a></li>
-                <li><a href="../Query form/Query Form.html">Customer Coner</a></li>
+                <li><a href="../../Sanjula Student2/Query form/Query Form.html">Customer Corner</a></li>
                 <li><a href="../../Randeepa Student4/index.html">Thumbnail Images</a></li>
-                <li><a href="../../Article/pagearticle.html">Article</a> </li>
+                <li><a href="../../Article/pagearticle.html">Article</a></li>
             </ul>
         </div>
         <br>
@@ -27,12 +27,29 @@
         <br>
         <br>
         <h1>Sri Lanka's Premiere Cricket Merchants</h1>
+        <fieldset>
+            <img class="img" src="gettyimages-636479872-2048x2048.jpg" alt=" cricket">
+            <legend> Product Brands</legend>
+            <p>&nbsp; &nbsp;As Sri Lanka's Premiere Cricket Merchants, we give our customers a high-quality product experience. There are many types of brands that get involved with us to fulfill all the hopes of our customers. 
+            <ul>
+               <li>Gray Nicolls</li>
+               <li>Sareen Sports Industries (also called SS) </li>
+               <li>kookaburra </li>
+               <li>Gunn & Moore(GM)</li>
+        </fieldset>
+        <fieldset>
+            <img class="img" src="depositphotos_53328635-stock-photo-customer-first-concept.jpg" alt=" coustmer">
+            <legend>Customer Care</legend>
+            <p>&nbsp; &nbsp;We had a huge customer base to buy our various products, with that as a business organization we provide a very reliable customer care unit whatever the needs customers need to fulfill through our organization. Services we provide,
+            <ul >
+                <li>24/7 Hotlines and Email services</li>
+                <li>For online orders, we give you a personal salesman.</li>
+                <li>Repair your product(Terms and Conditions apply)</li>
+                <li>Special help for junior cricketers</li>
+            </ul>
+        </fieldset>
+
     </header>
-
-    <footer>
-        <a href="../Editor/mytask.html">Page Editor</a>
-    </footer>
-    
-
+    <a class="editor" href="../Editor/mytask.html">Editor</a>
 </body>
 </html>
